# SNA4Slack---BLG-411E

./: .gitignore  README.md  app.json  config.py  config_test.py  manage.py  pyproject.toml  requirements.txt  server.py
SNA_Analyse/: SlackAnalyse.py
frontend/: frontend.py
frontend/templates/: layout.html  progress_bar.html  upload.html
frontend/templates/includes/: navbar.html
src/: routes.py
src/controllers/: AppController.py  FileController.py  GraphController.py  GraphController.py.py  SNAController.py  UserController.py
src/models/: FileInfo.py  FileInfos.py  SNAPreference.py  SNAPreferences.py  User.py  Users.py  __init__.py
src/views/: 403.html  404.html  app.html  graph.html  layout.html  preference.html  progress_bar.html  statistics.html  upload.html
src/views/includes/: navbar.html
static/: custom.css
static/uploads/asd123/extract/: channels.json  integration_logs.json  users.json
static/uploads/asd123/extract/algorithm/: 2022-01-03.json
static/uploads/asd123/extract/cat-facts-bot/: 2022-01-03.json
static/uploads/asd123/extract/funny/: 2022-01-03.json  2022-01-04.json
static/uploads/asd123/extract/general/: 2022-01-03.json
static/uploads/asd123/extract/news-bot/: 2022-01-03.json
static/uploads/asd123/extract/q-a-bot-channel/: 2022-01-03.json
static/uploads/asd123/extract/random/: 2022-01-03.json
static/uploads/asd123/extract/team-frontend/: 2022-01-03.json
tests/: test_base_case.py  test_db_sna_query.py
