[tool.poetry]
name = "SNA4SlackApp"
version = "0.1.0"
description = "Social Network Analysis for Slack Channels"
authors = ["Your Name <you@example.com>"]

readme="README.md"
homepage="https://github.com/itusweng/group22"
repository="https://github.com/itusweng/group22"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
